--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <span class="btn-defalut">Toggle</span>
       </div>
       <div class="checkbox-group">
-        <label class="checkbox default">
+        <label class="checkbox default check-circle">
           <input type="checkbox" checked />
           <span class="checkmark"></span>
           Default
         </label>
-        <label class="checkbox primary">
+        <label class="checkbox primary check-semi">
           <input type="checkbox" checked />
           <span class="checkmark"></span>
           Primary
@@ -31,12 +31,12 @@
           <span class="checkmark"></span>
           Secondary
         </label>
-        <label class="checkbox success">
+        <label class="checkbox success check-circle">
           <input type="checkbox" checked />
           <span class="checkmark"></span>
           Success
         </label>
-        <label class="checkbox warning">
+        <label class="checkbox warning check-semi">
           <input type="checkbox" checked />
           <span class="checkmark"></span>
           Warning
