--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Siyam</title>
+    <!-- <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    /> -->
     <link rel="stylesheet" href="./css/style.min.css" />
   </head>
   <body>
@@ -13,7 +19,7 @@
           <input type="checkbox" class="switch-input" />
           <span class="switch-slider"></span>
         </label>
-        <span class="btn-defalut">Toggle</span>
+        <span class="badge-danger">Toggle</span>
       </div>
       <div class="checkbox-group">
         <label class="checkbox default check-circle">
@@ -56,13 +62,15 @@
         <div class="progress-circle danger" aria-label="Loading..."></div>
       </div>
 
-      <button class="open-modal-btn" onclick="openModal()">Open Modal</button>
+      <button class="open-modal-md-btn" onclick="openModal()">
+        Open Modal-md
+      </button>
 
-      <div id="modal" class="modal">
-        <div class="modal-content">
-          <div class="modal-header">Modal Title</div>
+      <div id="modal-md-ui" class="modal-md-ui">
+        <div class="modal-md-ui-content">
+          <div class="modal-md-ui-header">Modal Title</div>
           <div class="divider"></div>
-          <div class="modal-body">
+          <div class="modal-md-ui-body">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
               pulvinar risus non risus hendrerit venenatis. Pellentesque sit
@@ -83,11 +91,42 @@
             </p>
           </div>
           <div class="divider"></div>
-          <div class="modal-footer">
-            <button class="close-btn" onclick="closeModal()">Close</button>
-            <button class="action-btn" onclick="closeModal()">Action</button>
+          <div class="modal-md-ui-footer">
+            <button class="modal-md-close-btn" onclick="closeModal()">
+              Close
+            </button>
+            <button class="modal-md-action-btn" onclick="closeModal()">
+              Action
+            </button>
           </div>
         </div>
+      </div>
+
+      <div class="card-ui">
+        <div class="card-header-ui">
+          <img
+            class="card-image"
+            src="https://avatars.githubusercontent.com/u/86160567?s=200&v=4"
+            alt="nextui logo"
+          />
+          <div class="card-info">
+            <p class="card-title-ui">Card Title</p>
+            <p class="card-subtitle-ui">Card</p>
+          </div>
+        </div>
+
+        <div class="card-body-ui">
+          <p>Make beautiful websites regardless of your design experience.</p>
+          <div class="responsive-container">
+            <img
+              src="https://imgs.search.brave.com/hv9ItpjUTKyuuCMxqud2zm_coNN5PAZaTSNcfuJA6-0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMxLnNyY2RuLmNv/bS93b3JkcHJlc3Mv/d3AtY29udGVudC91/cGxvYWRzL3dtLzIw/MjQvMDcvcm9iZXJ0/LWRvd25leS1qci1z/LW1jdS1yZXR1cm4t/cmVwb3J0LXN1Z2dl/c3RzLWEtaHVnZS1k/b2N0b3ItZG9vbS10/d2lzdC5qcGc"
+              alt="Responsive"
+              class="responsive-image"
+            />
+          </div>
+        </div>
+
+        <div class="card-footer-ui">Card footer</div>
       </div>
     </div>
     <script src="./js/script.min.js"></script>
