add utility classes for text color and background color

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <input type="checkbox" class="switch-input" />
           <span class="switch-slider"></span>
         </label>
-        <span class="badge-danger">Toggle</span>
+        <span class="badge-danger color-red">Toggle</span>
       </div>
       <div class="checkbox-group">
         <label class="checkbox default check-circle">
@@ -116,7 +116,9 @@
         </div>
 
         <div class="card-body-ui">
-          <p>Make beautiful websites regardless of your design experience.</p>
+          <p class="color-gradient-light-dark-gray">
+            Make beautiful websites regardless of your design experience.
+          </p>
           <div class="responsive-container">
             <img
               src="https://imgs.search.brave.com/hv9ItpjUTKyuuCMxqud2zm_coNN5PAZaTSNcfuJA6-0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMxLnNyY2RuLmNv/bS93b3JkcHJlc3Mv/d3AtY29udGVudC91/cGxvYWRzL3dtLzIw/MjQvMDcvcm9iZXJ0/LWRvd25leS1qci1z/LW1jdS1yZXR1cm4t/cmVwb3J0LXN1Z2dl/c3RzLWEtaHVnZS1k/b2N0b3ItZG9vbS10/d2lzdC5qcGc"
