add colors important in utility class

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <input type="checkbox" class="switch-input" />
           <span class="switch-slider"></span>
         </label>
-        <span class="badge-danger color-red">Toggle</span>
+        <span class="badge-danger">Toggle</span>
       </div>
       <div class="checkbox-group">
         <label class="checkbox default check-circle">
