remove heart switch

--- a/index.html
+++ b/index.html
@@ -22,17 +22,23 @@
           </label>
           <span class="badge-danger">Toggle</span>
         </div>
-        <div class="switch-heart">
-          <span class="heart"></span>
-        </div>
+        <div
+          class="toggleSwitch-ui"
+          data-id="switch1Toggle"
+          data-value="i love her"
+          data-label="Switch 1"
+          label-class="badge-danger"
+          data-class="secondary"
+        ></div>
 
         <!-- Default switch -->
         <div
           class="switch-line"
+          id="data-line"
           data-value="arp"
-          data-id="lineSwitchCs"
+          data-id="AssignSwitch"
           data-required="false"
-          data-checked="false"
+          data-checked="true"
         ></div>
 
         <!-- Success switch -->
@@ -54,7 +60,7 @@
         <div class="switch-line default"></div>
 
         <!-- Example with active state -->
-        <div class="switch-line success active"></div>
+        <div class="switch-line success"></div>
 
         <div class="checkbox-group">
           <label class="checkbox default check-circle">
@@ -189,8 +195,10 @@
         <div
           class="checkBox-ui"
           data-class="danger check-circle"
-          data-checked="true"
+          data-id="checkBoxEvan"
+          data-checked="false"
           data-name="siyamCheck"
+          data-value="janina"
           data-label="Evangel"
           label-class="btn-primary"
         ></div>
