--- a/test.html
+++ b/test.html
@@ -4,83 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Siyam</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./src/css/style.min.css" />
+    <style>
+      .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 30px;
+      }
+
+      .checkbox {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        border-radius: 30px;
+        transition: 0.4s;
+      }
+
+      .slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 2px;
+        bottom: 2px;
+        background-color: #6200ea; /* purple color */
+        border-radius: 50%;
+        transition: 0.4s;
+      }
+
+      .checkbox:checked + .slider {
+        background-color: #ccc; /* adjust this color if needed */
+      }
+
+      .checkbox:checked + .slider:before {
+        transform: translateX(30px);
+      }
+    </style>
   </head>
   <body>
-    <div class="container-center flex column gap-30">
-      <div class="flex">
-        <div
-          class="toggleSwitch-ui"
-          data-label="Switch 1"
-          label-class="badge-danger"
-        ></div>
-        <div
-          class="toggleSwitch-ui"
-          data-label="Switch 2"
-          data-class="custom-class"
-        ></div>
-        <div class="toggleSwitch-ui" data-label="Switch 3"></div>
-      </div>
-
-      <div class="checkbox-group">
-        <div
-          class="checkBox-ui"
-          data-class="default check-circle"
-          data-label="hello"
-          label-class="badge-danger"
-        ></div>
-        <div
-          class="checkBox-ui"
-          data-class="primary check"
-          data-checked="true"
-          data-name="siyamCheck"
-          data-label="siyam click"
-          label-class="badge-defalut"
-        ></div>
-      </div>
-
-      <div
-        class="loader-circle"
-        data-class="danger"
-        aria-label="Loading..."
-      ></div>
+    <div class="switch">
+      <input type="checkbox" id="toggle" class="checkbox" />
+      <label class="slider" for="toggle"></label>
     </div>
-
-    <div class="toggleSwitch-ui" data-class="custom-class"></div>
-
-    <div class="checkbox-group">
-      <div
-        class="checkBox-ui"
-        data-class="danger check-circle"
-        data-checked="true"
-        data-name="siyamCheck"
-        data-label="Evangel"
-        label-class="btn-primary"
-      ></div>
-
-      <div
-        class="checkBox-ui"
-        data-class="danger check-circle"
-        data-checked="true"
-        data-name="siyamCheck"
-        label-class="badge-defalut"
-      ></div>
-
-      <div
-        class="checkBox-ui"
-        data-class="danger check-circle"
-        data-checked="true"
-        data-name="siyamCheck"
-        label-class="badge-defalut"
-      ></div>
-    </div>
-
-    <script src="./src/js/script.min.js"></script>
   </body>
 </html>
