linr switch add eventlistner bug fixed

--- a/index.html
+++ b/index.html
@@ -34,11 +34,17 @@
         <!-- Default switch -->
         <div
           class="switch-line"
-          id="data-line"
-          data-value="arp"
+          data-value="janina ki ache"
           data-id="AssignSwitch"
           data-required="false"
           data-checked="true"
+        ></div>
+
+        <div
+          class="switch-line success"
+          data-value="i love you"
+          data-id="loveSwitch"
+          data-required="false"
         ></div>
 
         <!-- Success switch -->
